Fixed weird rendering behaviour on firefox

--- a/client/card.css
+++ b/client/card.css
@@ -53,6 +53,7 @@
 
 .card>div.back {
 	transform: rotateY(180deg);
+	backface-visibility: hidden;
 }
 
 #playingfield .card.flipped {
